State & db structBlock synchronization